[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/mainMenu.gd" type="Script" id=1]
[ext_resource path="res://textures/UI/Menus/conback.svg" type="Texture" id=2]
[ext_resource path="res://fonts/germania_48.tres" type="DynamicFont" id=3]

[node name="mainMenu" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 7

[node name="start_container" type="Container" parent="TextureRect" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 461.0
margin_right = 1024.0
margin_bottom = 721.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="start" type="Button" parent="TextureRect/start_container" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 384.0
margin_right = 640.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0.3125, 0.128174, 0.219108, 1 )
custom_colors/font_color = Color( 1, 0.411765, 0.701961, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Start"
flat = false
align = 1
_sections_unfolded = [ "Rect", "Textures", "custom_colors", "custom_fonts" ]

[node name="options" type="Button" parent="TextureRect/start_container" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 384.0
margin_top = 84.0
margin_right = 640.0
margin_bottom = 148.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.411765, 0.701961, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Options"
flat = false
align = 1
_sections_unfolded = [ "Margin", "Rect", "Textures", "custom_colors", "custom_fonts" ]

[node name="quit" type="Button" parent="TextureRect/start_container" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 384.0
margin_top = 168.0
margin_right = 640.0
margin_bottom = 232.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.411765, 0.701961, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Quit"
flat = false
align = 1
_sections_unfolded = [ "Margin", "Rect", "Textures", "custom_colors", "custom_fonts" ]

[node name="load_container" type="Container" parent="TextureRect" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 461.0
margin_right = 1024.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="ProgressBar" type="TextureProgress" parent="TextureRect/load_container" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 128.0
margin_top = 64.0
margin_right = 886.0
margin_bottom = 128.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
texture_under = null
texture_over = null
texture_progress = null
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Label" type="Label" parent="TextureRect" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 620.0
margin_top = 358.0
margin_right = 726.0
margin_bottom = 414.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.411765, 0.701961, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Alpha"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[connection signal="pressed" from="TextureRect/start_container/start" to="." method="_on_start_pressed"]

[connection signal="pressed" from="TextureRect/start_container/quit" to="." method="_on_quit_pressed"]


